PN-18359 - Exposing new abstraction APIs on pn-timeline-service
